--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <!--========== CSS ==========-->
     <link rel="stylesheet" href="assets/css/styles.css">
 
-    <title>Resume CV - Frank</title>
+    <title>Resume CV - Winarto</title>
 </head>
 
 <body>
     <!--========== HEADER ==========-->
     <header class=" l-header" id="header">
         <nav class="nav bd-container">
-            <a href="#" class="nav__logo">Frank</a>
+            <a href="#" class="nav__logo">Winarto</a>
 
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
@@ -82,9 +82,9 @@
                         <div class="home__data bd-grid">
                             <img src="assets/img/perfil.jpg" alt="" class="home__img">
 
-                            <h1 class="home__title">RODRÍGUEZ SIRET <b>FRANK</b></h1>
+                            <h1 class="home__title">WINARTO DIHARJO <b></b></h1>
 
-                            <h3 class="home__profession">Java Developer</h3>
+                            <h3 class="home__profession">Web Developer</h3>
 
                             <!-- Button to download yout CV saved in the pdf folder. Available for mobile -->
                             <div>
@@ -95,15 +95,15 @@
 
                         <div class="home__address bd-grid">
                             <span class="home__information">
-                                <i class='bx bx-map home__icon'></i> Santiago de Cuba, Cuba
+                                <i class='bx bx-map home__icon'></i> Central Java, Indonesia
                             </span>
 
-                            <a href="mailto:frank.siret@gmail.com" target="_black" class="home__information">
-                                <i class='bx bx-envelope home__icon'></i> frank.siret@gmail.com
+                            <a href="mailto:winartodiharjo@gmail.com" target="_black" class="home__information">
+                                <i class='bx bx-envelope home__icon'></i> winartodiharjo@gmail.com
                             </a>
 
-                            <a href="tel:+5352268245" target="_black" class="home__information">
-                                <i class='bx bx-phone home__icon'></i> (+53) 551 218 66
+                            <a href="tel:+62" target="_black" class="home__information">
+                                <i class='bx bx-phone home__icon'></i> (+62) 
                             </a>
                         </div>
 
@@ -125,25 +125,25 @@
                     <h2 class="section-title">SOCIAL</h2>
 
                     <div class="social__container bd-grid">
-                        <a href="https://linkedin.com/in/frank-siret/" target="_black" class="social__link">
-                            <i class='bx bxl-linkedin-square social__icon'></i> @frank-siret
+                        <!-- <a href="https://linkedin.com/in/winartodiharjo/" target="_black" class="social__link">
+                            <i class='bx bxl-linkedin-square social__icon'></i> @winartodiharjo
+                        </a> -->
+
+                        <a href="https://github.com/winartodiharjo" target="_black" class="social__link">
+                            <i class='bx bxl-github social__icon'></i> @winartodiharjo
                         </a>
 
-                        <a href="https://github.com/FrankSiret" target="_black" class="social__link">
-                            <i class='bx bxl-github social__icon'></i> @FrankSiret
-                        </a>
+                        <!-- <a href="https://twitter.com/winartodiharjo" target="_black" class="social__link">
+                            <i class='bx bxl-twitter social__icon'></i> @winartodiharjo
+                        </a> -->
 
-                        <a href="https://twitter.com/FrankSiret" target="_black" class="social__link">
-                            <i class='bx bxl-twitter social__icon'></i> @FrankSiret
-                        </a>
-
-                        <a href="https://stackoverflow.com/users/11278974/franksiret" target="_black"
+                        <!--<a href="https://stackoverflow.com/users/11278974/winartodiharjo" target="_black"
                             class="social__link">
-                            <i class='bx bxl-stack-overflow social__icon'></i> @FrankSiret
-                        </a>
+                            <i class='bx bxl-stack-overflow social__icon'></i> @winartodiharjo
+                        </a> -->
 
-                        <a href="https://www.instagram.com/franksiret/" target="_black" class="social__link">
-                            <i class='bx bxl-instagram social__icon'></i> @FrankSiret
+                        <a href="https://www.instagram.com/winartodiharjo/" target="_black" class="social__link">
+                            <i class='bx bxl-instagram social__icon'></i> @winartodiharjo
                         </a>
                     </div>
                 </section>
