--- a/index.html
+++ b/index.html
@@ -180,10 +180,10 @@
                             </div>
 
                             <div class="education__data bd-grid">
-                                <h3 class="education__title">Bachelor's degree in Computer Science</h3>
-                                <span class="education__studies">Universidad de Oriente - Cuba</span>
-                                <span class="education__year">Sep 2014 - Jun 2019</span>
-                                <ul class="education__list">
+                                <h3 class="education__title">Bachelor's degree in Information Technology</h3>
+                                <span class="education__studies">Purworejo Muhammadiyah University - Indonesia</span>
+                                <span class="education__year">Sep 2017 - Jun 2022</span>
+                                <!-- <ul class="education__list">
                                     <li class="education__description">
                                         <span class="education__circle"></span>
                                         <div>Graduated with Gold Title and Scientific Merit Award, recognizing academic
@@ -345,7 +345,7 @@
                                         <div>Completed a degree thesis on Information Retrieval, demonstrating research
                                             skills and expertise in a specific area of Computer Science.</div>
                                     </li>
-                                </ul>
+                                </ul>-->
                             </div>
                         </div>
 
@@ -841,7 +841,7 @@
                 </section>
 
                 <!--========== CERTIFICATES ==========-->
-                <section class="certificate section" id="certificates">
+                <!--<section class="certificate section" id="certificates">
                     <h2 class="section-title">Certificates</h2>
 
                     <div class="certificate__container bd-grid bd-grid-2">
@@ -862,7 +862,7 @@
                         </div>
 
                     </div>
-                </section>
+                </section>-->
 
                 <!--========== LANGUAGES ==========-->
                 <section class="languages section">
@@ -871,7 +871,7 @@
                     <div class="languages__container">
                         <ul class="languages__content bd-grid">
                             <li class="languages__name">
-                                <span class="languages__circle"></span> Spanish - C2 (Native proficiency)
+                                <span class="languages__circle"></span> Indonesia - C2 (Native proficiency)
                             </li>
 
                             <li class="languages__name">
