--- a/index.html
+++ b/index.html
@@ -593,7 +593,7 @@
                 <section class="experience section" id="experience">
                     <h2 class="section-title">Experience</h2>
 
-                    <div class="experience__container bd-grid">
+                    <!--<div class="experience__container bd-grid">
                         <div class="experience__content">
                             <div class="experience__time">
                                 <span class="experience__rounder"></span>
@@ -837,14 +837,14 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div>-->
                 </section>
 
                 <!--========== CERTIFICATES ==========-->
-                <!--<section class="certificate section" id="certificates">
+                <section class="certificate section" id="certificates">
                     <h2 class="section-title">Certificates</h2>
 
-                    <div class="certificate__container bd-grid bd-grid-2">
+                    <!--<div class="certificate__container bd-grid bd-grid-2">
 
                         <div class="certificate__content bd-grid">
                             <h3 class="certificate__title">Problem Solving Certificate</h3>
