--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                     <br>
                     <p class="profile__description">
                         In terms of technical skills, I am proficient in several programming languages including <strong>C++</strong>,
-                        <strong>Java</strong>, and <strong>JavaScript</strong>. My experience in these languages has enabled me to develop a deep
+                        <strong>Java</strong>, and <strong>PHP</strong>. My experience in these languages has enabled me to develop a deep
                         understanding of their nuances and capabilities, allowing me to deliver high-quality code that
                         meets project requirements.
                     </p>
