--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
                             <!-- Button to download yout CV saved in the pdf folder. Available for mobile -->
                             <div>
-                                <a download="" href="assets/pdf/cv-frank-rodriguez-ca.pdf" target="_blank"
+                                <a download="" href="assets/pdf/cv.pdf" target="_blank"
                                     class="home__button-movil">Download</a>
                             </div>
                         </div>
@@ -116,7 +116,7 @@
                     <!-- <i class="bx bx-download generate-pdf" title="Generate PDF" id="resume-button"></i> -->
 
                     <a title="Download PDF" class="bx bx-download generate-pdf" download=""
-                        href="assets/pdf/cv-frank-rodriguez-ca.pdf" target="_blank"></a>
+                        href="assets/pdf/cv.pdf" target="_blank"></a>
 
                 </section>
 
